--- a/public/styles/login/login.scss
+++ b/public/styles/login/login.scss
@@ -34,7 +34,7 @@ body {
     height: 570px;
 }
 
-.input-check{
+.input-check {
     display: flex;
     width: 100%;
     justify-content: center;
@@ -131,12 +131,20 @@ input[type="submit"] {
     }
 }
 
-.error{
-    color: red;
+.error,
+.success {
     font-size: 1em;
     margin: 0 0 10px 0;
     text-align: center;
     font-weight: 600;
+}
+
+.error {
+    color: red;
+}
+
+.success {
+    color: rgb(6, 185, 6);
 }
 
 .forget {
