--- a/public/styles/header/header.css
+++ b/public/styles/header/header.css
@@ -1,7 +1,12 @@
+@media all and (max-width: 767px) {
+  * {
+    font-size: small;
+  }
+}
 body {
   margin: 0;
   padding: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: "lato", sans-serif;
   background-color: #e7e7e7;
 }
 
