--- a/public/styles/home/home.css
+++ b/public/styles/home/home.css
@@ -1,19 +1,73 @@
-* {
-  border: 1px solid rgba(255, 0, 0, 0.404);
-}
-
-#dashboard {
+.dashboard {
   display: flex;
   justify-content: space-around;
-}
-
-#right-pannel {
-  display: flex;
-  flex-direction: column;
   align-items: center;
 }
 
 .flex-inline {
   display: flex;
   flex-direction: row;
+}
+
+.container {
+  width: 42%;
+  padding: 2vw;
+}
+
+ul {
+  padding: 0;
+}
+
+.responsive-table {
+  background-color: #f5f5f5;
+}
+.responsive-table li {
+  align-items: center;
+  border-radius: 5px;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 5px;
+  height: 20px;
+}
+.responsive-table .table-header {
+  background-color: #95A5A6;
+  font-size: 14px;
+  text-transform: uppercase;
+  letter-spacing: 0.03em;
+}
+.responsive-table .table-row {
+  background-color: #ffffff;
+  box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.1);
+}
+.responsive-table .table-row:hover {
+  background-color: #f5f5f5;
+  transform: scale(1.01);
+}
+.responsive-table .col-1 {
+  flex-basis: 20%;
+}
+.responsive-table .col-2 {
+  flex-basis: 50%;
+}
+.responsive-table .col-3 {
+  flex-basis: 15%;
+}
+.responsive-table .col-4 {
+  flex-basis: 15%;
+}
+
+@media all and (max-width: 767px) {
+  .dashboard {
+    flex-direction: column;
+  }
+  .container {
+    width: 90%;
+  }
+  .responsive-table li {
+    height: 5px;
+  }
+  .flex-inline {
+    flex-direction: column;
+  }
 }/*# sourceMappingURL=home.css.map */
