--- a/public/styles/header/header.css
+++ b/public/styles/header/header.css
@@ -1,13 +1,20 @@
-@media all and (max-width: 767px) {
-  * {
-    font-size: small;
-  }
-}
 body {
   margin: 0;
   padding: 0;
   font-family: "lato", sans-serif;
   background-color: #e7e7e7;
+  margin-left: 175px;
+}
+
+#dark {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  transition: all 0.3s ease-in-out;
+  background-color: rgba(0, 0, 0, 0);
+  z-index: -1;
 }
 
 header {
@@ -25,7 +32,6 @@ header nav {
   display: flex;
   align-items: center;
   padding: 0 20px;
-  justify-content: space-between;
 }
 header div {
   width: 100%;
@@ -33,14 +39,69 @@ header div {
   justify-content: flex-end;
   align-items: center;
 }
-header ul {
-  display: flex;
-  list-style: none;
-  width: 100%;
-}
-header a {
+header #username {
   margin: 0 10px;
   text-decoration: none;
   color: #464646;
   font-weight: bold;
+}
+header #page-name {
+  color: #464646;
+  font-size: 1.5em;
+  font-weight: bold;
+  margin: 0 10px;
+}
+header #navicon {
+  display: none;
+  width: 50px;
+  height: 50px;
+}
+
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  padding: 5px 10px;
+  background-color: #d4d4d4;
+}
+
+#side-menu {
+  z-index: 100;
+  background-color: #33334c;
+  height: 100vh;
+  width: 175px;
+  padding-top: 90px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  margin: 0;
+  transition: all 0.5s ease-in-out;
+}
+#side-menu .corner {
+  background-color: #212147;
+  position: absolute;
+  top: 0;
+  width: 175px;
+  height: 80px;
+}
+#side-menu a {
+  color: #fff;
+  text-decoration: none;
+  padding: 20px 43.75px;
+  display: block;
+}
+
+@media all and (max-width: 767px) {
+  * {
+    font-size: small;
+  }
+  body {
+    margin-left: 0;
+  }
+  #side-menu {
+    left: -175px;
+  }
+  #navicon {
+    display: block !important;
+  }
 }/*# sourceMappingURL=header.css.map */
