--- a/public/styles/header/header.scss
+++ b/public/styles/header/header.scss
@@ -1,19 +1,29 @@
-@media all and (max-width: 767px) {
-    * {
-        font-size: small;
-    }
-}
+$margin-left: 175px;
+$header-height: 80px;
+$phone-width: 767px;
 
 body {
     margin: 0;
     padding: 0;
     font-family: 'lato', sans-serif;
     background-color: #e7e7e7;
+    margin-left: $margin-left;
+}
+
+#dark {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    transition: all 0.3s ease-in-out;
+    background-color: #00000000;
+    z-index: -1;
 }
 
 header {
     background-color: #c5c5c5;
-    height: 80px;
+    height: $header-height;
     top: 0;
     right: 0;
     margin: 0;
@@ -26,7 +36,6 @@ header {
         display: flex;
         align-items: center;
         padding: 0 20px;
-        justify-content: space-between
     }
 
     div {
@@ -36,16 +45,77 @@ header {
         align-items: center;
     }
 
-    ul {
-        display: flex;
-        list-style: none;
-        width: 100%;
-    }
-
-    a {
+    #username {
         margin: 0 10px;
         text-decoration: none;
         color: #464646;
         font-weight: bold;
+    }
+
+    #page-name {
+        color: #464646;
+        font-size: 1.5em;
+        font-weight: bold;
+        margin: 0 10px;
+    }
+
+    #navicon {
+        display: none;
+        width: 50px;
+        height: 50px;
+    }
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    padding: 5px 10px;
+    background-color: #d4d4d4;
+}
+
+#side-menu {
+    z-index: 100;
+    background-color: #33334c;
+    height: 100vh;
+    width: $margin-left;
+    padding-top: $header-height+10px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    margin: 0;
+    transition: all 0.5s ease-in-out;
+
+    .corner {
+        background-color: #212147;
+        position: absolute;
+        top: 0;
+        width: $margin-left;
+        height: $header-height;
+    }
+
+    a {
+        color: #fff;
+        text-decoration: none;
+        padding: 20px $margin-left/4;
+        display: block;
+    }
+}
+
+@media all and (max-width: $phone-width) {
+    * {
+        font-size: small;
+    }
+
+    body {
+        margin-left: 0;
+    }
+
+    #side-menu {
+        left: -$margin-left;
+    }
+
+    #navicon {
+        display: block !important;
     }
 }
