--- a/public/styles/header/header.css
+++ b/public/styles/header/header.css
@@ -1,11 +1,3 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: "lato", sans-serif;
-  background-color: #e7e7e7;
-  margin-left: 175px;
-}
-
 #dark {
   position: fixed;
   top: 0;
@@ -70,12 +62,13 @@ footer {
   background-color: #33334c;
   height: 100vh;
   width: 175px;
-  padding-top: 90px;
   position: fixed;
   top: 0;
   left: 0;
   margin: 0;
-  transition: all 0.5s ease-in-out;
+  padding: 0;
+  padding-top: 90px;
+  transition: all 0.3s ease-in-out;
 }
 #side-menu .corner {
   background-color: #212147;
@@ -90,14 +83,11 @@ footer {
   padding: 20px 43.75px;
   display: block;
 }
+#side-menu li {
+  list-style: none;
+}
 
 @media all and (max-width: 767px) {
-  * {
-    font-size: small;
-  }
-  body {
-    margin-left: 0;
-  }
   #side-menu {
     left: -175px;
   }
