--- a/public/styles/header/header.scss
+++ b/public/styles/header/header.scss
@@ -2,14 +2,6 @@ $margin-left: 175px;
 $header-height: 80px;
 $phone-width: 767px;
 
-body {
-    margin: 0;
-    padding: 0;
-    font-family: 'lato', sans-serif;
-    background-color: #e7e7e7;
-    margin-left: $margin-left;
-}
-
 #dark {
     position: fixed;
     top: 0;
@@ -79,12 +71,13 @@ footer {
     background-color: #33334c;
     height: 100vh;
     width: $margin-left;
-    padding-top: $header-height+10px;
     position: fixed;
     top: 0;
     left: 0;
     margin: 0;
-    transition: all 0.5s ease-in-out;
+    padding: 0;
+    padding-top: $header-height+10px;
+    transition: all 0.3s ease-in-out;
 
     .corner {
         background-color: #212147;
@@ -100,17 +93,14 @@ footer {
         padding: 20px $margin-left/4;
         display: block;
     }
+
+    li {
+        list-style: none;
+    }
+    
 }
 
 @media all and (max-width: $phone-width) {
-    * {
-        font-size: small;
-    }
-
-    body {
-        margin-left: 0;
-    }
-
     #side-menu {
         left: -$margin-left;
     }
