--- a/public/styles/generics/generics.scss
+++ b/public/styles/generics/generics.scss
@@ -16,6 +16,27 @@ body {
     width: 100%;
 }
 
+// Date picker ------------------------------------------
+input[type="date"] {
+    background: #fff url(https://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/calendar_2.png) 97% 50% no-repeat;
+    border: 1px solid #c4c4c4;
+    border-radius: 5px;
+    background-color: #fff;
+    padding: 3px 5px;
+    box-shadow: inset 0 3px 6px rgba(0, 0, 0, 0.1);
+    width: 151px;
+}
+
+input[type="date"]::-webkit-inner-spin-button {
+    display: none;
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+    opacity: 0;
+}
+
+// -----------------------------------------------------
+
 @media all and (max-width: 767px) {
     * {
         font-size: small;
