--- a/public/styles/pages/operations/operations.css
+++ b/public/styles/pages/operations/operations.css
@@ -8,7 +8,14 @@
   margin: 2vw;
 }
 
-#add_pannel {
+#account_selection {
+  margin-top: 25px;
+}
+#account_selection #selected-account {
+  width: 100%;
+}
+
+#add-pannel {
   background-color: #f5f5f5;
   border-radius: 5px;
   height: 500px;
@@ -16,9 +23,49 @@
   flex-direction: column;
   align-items: center;
 }
-
-#add-field {
+#add-pannel #add-form {
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+#add-pannel #add-form #add-field {
+  display: none;
+  opacity: 0;
+  transition: 0.3s;
+  transform: translate(50px, 0);
+  width: 80%;
+  height: 80%;
+  flex-direction: column;
+  justify-content: space-evenly;
   border: 0px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.5);
+  margin: 25px;
+  background-color: #f7f4f4;
+}
+#add-pannel #add-form #add-field #create-operation {
+  margin: auto;
+  padding: 5px 20px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+}
+#add-pannel #add-form #add-field #create-operation:hover {
+  background-color: #ececec;
+}
+#add-pannel #add-form #add-field div {
+  display: flex;
+  flex-direction: column;
+}
+#add-pannel #add-form #add-field div * {
+  margin: 5px;
+}
+#add-pannel #add-form #add-field .flex-div {
+  display: flex;
+  flex-direction: row;
 }
 
 .responsive-table .col-1 {
@@ -34,6 +81,8 @@
   flex-basis: 15%;
 }
 .responsive-table .col-5 {
+  display: flex;
+  justify-content: center;
   flex-basis: 10%;
 }
 
