--- a/public/styles/generics/generics.scss
+++ b/public/styles/generics/generics.scss
@@ -9,6 +9,11 @@ body {
     overflow-x: hidden;
 }
 
+.card-button {
+    width: 25px;
+    cursor: pointer;
+}
+
 .dashboard {
     display: flex;
     justify-content: space-evenly;
@@ -16,15 +21,22 @@ body {
     width: 100%;
 }
 
-// Date picker ------------------------------------------
-input[type="date"] {
-    background: #fff url(https://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/calendar_2.png) 97% 50% no-repeat;
+input,
+select {
     border: 1px solid #c4c4c4;
     border-radius: 5px;
     background-color: #fff;
     padding: 3px 5px;
     box-shadow: inset 0 3px 6px rgba(0, 0, 0, 0.1);
+}
+
+input[type="date"] {
+    background: #fff url(https://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/calendar_2.png) 97% 50% no-repeat;
     width: 151px;
+}
+
+input[type="date"]:disabled {
+    background-color: rgb(221, 221, 221);
 }
 
 input[type="date"]::-webkit-inner-spin-button {
@@ -35,7 +47,15 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     opacity: 0;
 }
 
-// -----------------------------------------------------
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number] {
+    -moz-appearance: textfield;
+}
 
 @media all and (max-width: 767px) {
     * {
@@ -49,5 +69,9 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
     body {
         margin-left: 0;
+    }
+
+    .card-button {
+        width: 15px;
     }
 }
