--- a/public/styles/pages/accounts/accounts.scss
+++ b/public/styles/pages/accounts/accounts.scss
@@ -38,19 +38,6 @@ $phone-width: 767px;
     }
 }
 
-.card-action-buttons {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-top: 1vw;
-
-    img {
-        height: 25px;
-        width: 25px;
-        display: flex;
-    }
-}
-
 .responsive-table {
     .col-1 {
         flex-basis: 20%;
@@ -65,6 +52,8 @@ $phone-width: 767px;
     }
 
     .col-4 {
+        display: flex;
+        justify-content: center;
         flex-basis: 30%;
     }
 }
