--- a/public/styles/pages/operations/operations.scss
+++ b/public/styles/pages/operations/operations.scss
@@ -11,17 +11,72 @@ $phone-width: 767px;
     margin: 2vw;
 }
 
-#add_pannel {
+#account_selection {
+    margin-top: 25px;
+
+    #selected-account {
+        width: 100%;
+    }
+}
+
+#add-pannel {
     background-color: #f5f5f5;
     border-radius: 5px;
     height: 500px;
     display: flex;
     flex-direction: column;
     align-items: center;
-}
 
-#add-field{
-    border: 0px;
+    #add-form {
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        display: flex;
+        width: 100%;
+        height: 100%;
+
+        #add-field {
+            display: none;
+            opacity: 0;
+            transition: 0.3s;
+            transform: translate(50px, 0);
+            width: 80%;
+            height: 80%;
+            flex-direction: column;
+            justify-content: space-evenly;
+            border: 0px;
+            border-radius: 5px;
+            box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.5);
+            margin: 25px;
+            background-color: #f7f4f4;
+
+            #create-operation {
+                margin: auto;
+                padding: 5px 20px;
+                border-radius: 5px;
+                box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.5);
+                cursor: pointer;
+
+                &:hover {
+                    background-color: #ececec;
+                }
+            }
+
+            div {
+                display: flex;
+                flex-direction: column;
+
+                * {
+                    margin: 5px;
+                }
+            }
+
+            .flex-div {
+                display: flex;
+                flex-direction: row;
+            }
+        }
+    }
 }
 
 .responsive-table {
@@ -42,6 +97,8 @@ $phone-width: 767px;
     }
 
     .col-5 {
+        display: flex;
+        justify-content: center;
         flex-basis: 10%;
     }
 }
