--- a/public/styles/pages/accounts/accounts.scss
+++ b/public/styles/pages/accounts/accounts.scss
@@ -12,6 +12,7 @@ $phone-width: 767px;
 }
 
 #transfer {
+    margin-top: 3vw;
     background-color: #f5f5f5;
     border-radius: 5px;
     height: 500px;
