--- a/public/styles/header/header.scss
+++ b/public/styles/header/header.scss
@@ -49,6 +49,7 @@ header {
         font-size: 1.5em;
         font-weight: bold;
         margin: 0 10px;
+        white-space: nowrap;
     }
 
     #navicon {
