--- a/public/styles/pages/operations/operations.css
+++ b/public/styles/pages/operations/operations.css
@@ -16,6 +16,7 @@
 }
 
 #add-pannel {
+  margin-top: 3vw;
   background-color: #f5f5f5;
   border-radius: 5px;
   height: 500px;
@@ -72,18 +73,18 @@
   flex-basis: 20%;
 }
 .responsive-table .col-2 {
-  flex-basis: 40%;
+  flex-basis: 30%;
 }
 .responsive-table .col-3 {
   flex-basis: 15%;
 }
 .responsive-table .col-4 {
-  flex-basis: 15%;
+  flex-basis: 20%;
 }
 .responsive-table .col-5 {
   display: flex;
   justify-content: center;
-  flex-basis: 10%;
+  flex-basis: 15%;
 }
 
 @media all and (max-width: 767px) {
