--- a/public/styles/pages/operations/operations.scss
+++ b/public/styles/pages/operations/operations.scss
@@ -1,6 +1,3 @@
-$margin-left: 175px;
-$phone-width: 767px;
-
 .flex-inline {
     display: flex;
     flex-direction: row;
@@ -20,6 +17,7 @@ $phone-width: 767px;
 }
 
 #add-pannel {
+    margin-top: 3vw;
     background-color: #f5f5f5;
     border-radius: 5px;
     height: 500px;
@@ -85,7 +83,7 @@ $phone-width: 767px;
     }
 
     .col-2 {
-        flex-basis: 40%;
+        flex-basis: 30%;
     }
 
     .col-3 {
@@ -93,13 +91,13 @@ $phone-width: 767px;
     }
 
     .col-4 {
-        flex-basis: 15%;
+        flex-basis: 20%;
     }
 
     .col-5 {
         display: flex;
         justify-content: center;
-        flex-basis: 10%;
+        flex-basis: 15%;
     }
 }
 
