--- a/public/styles/pages/accounts/accounts.scss
+++ b/public/styles/pages/accounts/accounts.scss
@@ -41,7 +41,7 @@ $phone-width: 767px;
 
 .responsive-table {
     .col-1 {
-        flex-basis: 20%;
+        flex-basis: 25%;
     }
 
     .col-2 {
@@ -49,13 +49,14 @@ $phone-width: 767px;
     }
 
     .col-3 {
-        flex-basis: 20%;
+        flex-basis: 25%;
     }
 
     .col-4 {
         display: flex;
-        justify-content: center;
-        flex-basis: 30%;
+        justify-content: end;
+        flex-basis: 20%;
+        padding-right: 10px;
     }
 }
 
