--- a/public/styles/generics/generics.scss
+++ b/public/styles/generics/generics.scss
@@ -58,6 +58,8 @@ input[type=number] {
 }
 
 .valide_button {
+    text-decoration: none;
+    color: black;
     margin: 15px 3vw 0px auto;
     padding: 5px 20px;
     border-radius: 5px;
