--- a/public/styles/pages/accounts/accounts.css
+++ b/public/styles/pages/accounts/accounts.css
@@ -12,10 +12,13 @@
   margin-top: 3vw;
   background-color: #f5f5f5;
   border-radius: 5px;
-  height: 500px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 15px 0;
+}
+#transfer img {
+  margin: 10px;
 }
 #transfer .back-table-row {
   background-color: #ffffff;
@@ -32,6 +35,15 @@
   margin: 0;
   color: #b1b1b1;
 }
+#transfer #transfer-field {
+  display: flex;
+  flex-direction: column;
+  border: 0px;
+  margin-top: 15px;
+}
+#transfer #transfer-field input {
+  margin: 10px 0;
+}
 
 .responsive-table .col-1 {
   flex-basis: 25%;
@@ -47,10 +59,6 @@
   justify-content: end;
   flex-basis: 20%;
   padding-right: 10px;
-}
-
-#transfer-field {
-  border: 0px;
 }
 
 @media all and (max-width: 767px) {
