--- a/public/styles/pages/accounts/accounts.scss
+++ b/public/styles/pages/accounts/accounts.scss
@@ -15,10 +15,14 @@ $phone-width: 767px;
     margin-top: 3vw;
     background-color: #f5f5f5;
     border-radius: 5px;
-    height: 500px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 15px 0;
+
+    img {
+        margin: 10px;
+    }
 
     .back-table-row {
         background-color: #ffffff;
@@ -35,6 +39,17 @@ $phone-width: 767px;
         p {
             margin: 0;
             color: #b1b1b1;
+        }
+    }
+
+    #transfer-field {
+        display: flex;
+        flex-direction: column;
+        border: 0px;
+        margin-top: 15px;
+
+        input {
+            margin: 10px 0;
         }
     }
 }
@@ -58,10 +73,6 @@ $phone-width: 767px;
         flex-basis: 20%;
         padding-right: 10px;
     }
-}
-
-#transfer-field{
-    border: 0px;
 }
 
 @media all and (max-width: 767px) {
