--- a/public/styles/generics/generics.css
+++ b/public/styles/generics/generics.css
@@ -68,6 +68,14 @@ input[type=number] {
   background-color: #ececec;
 }
 
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */ /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */ /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently
+   supported by Chrome, Edge, Opera and Firefox */
+}
+
 @media all and (max-width: 767px) {
   * {
     font-size: small;
