--- a/public/styles/pages/accounts/accounts.css
+++ b/public/styles/pages/accounts/accounts.css
@@ -11,7 +11,7 @@
 #transfer {
   margin-top: 3vw;
   background-color: #f5f5f5;
-  border-radius: 5px;
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -45,14 +45,31 @@
   margin: 10px 0;
 }
 
+#create-account-field {
+  display: none;
+  background-color: #f5f5f5;
+  border-radius: 10px;
+  padding: 15px;
+  margin-bottom: 18px;
+}
+#create-account-field * {
+  margin: 5px;
+}
+#create-account-field #cancel-account {
+  display: flex;
+  justify-content: flex-end;
+  right: 15px;
+  left: auto;
+}
+
 .responsive-table .col-1 {
-  flex-basis: 25%;
+  flex-basis: 35%;
 }
 .responsive-table .col-2 {
-  flex-basis: 30%;
+  flex-basis: 25%;
 }
 .responsive-table .col-3 {
-  flex-basis: 25%;
+  flex-basis: 20%;
 }
 .responsive-table .col-4 {
   display: flex;
