--- a/public/styles/pages/accounts/accounts.scss
+++ b/public/styles/pages/accounts/accounts.scss
@@ -14,7 +14,7 @@ $phone-width: 767px;
 #transfer {
     margin-top: 3vw;
     background-color: #f5f5f5;
-    border-radius: 5px;
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -54,17 +54,36 @@ $phone-width: 767px;
     }
 }
 
+#create-account-field {
+    display: none;
+    background-color: #f5f5f5;
+    border-radius: 10px;
+    padding: 15px;
+    margin-bottom: 18px;
+
+    * {
+        margin: 5px;
+    }
+
+    #cancel-account {
+        display: flex;
+        justify-content: flex-end;
+        right: 15px;
+        left: auto;
+    }
+}
+
 .responsive-table {
     .col-1 {
-        flex-basis: 25%;
+        flex-basis: 35%;
     }
 
     .col-2 {
-        flex-basis: 30%;
+        flex-basis: 25%;
     }
 
     .col-3 {
-        flex-basis: 25%;
+        flex-basis: 20%;
     }
 
     .col-4 {
