Line analytics done!

--- a/public/styles/header/header.css
+++ b/public/styles/header/header.css
@@ -50,12 +50,14 @@ header #navicon {
   height: 50px;
 }
 
-footer {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  padding: 5px 10px;
-  background-color: #d4d4d4;
+.corner-back {
+  background-color: #c5c5c5;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 175px;
+  height: 80px;
 }
 
 #side-menu {
@@ -86,6 +88,14 @@ footer {
 }
 #side-menu li {
   list-style: none;
+}
+
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  padding: 5px 10px;
+  background-color: #d4d4d4;
 }
 
 @media all and (max-width: 767px) {
