--- a/public/styles/pages/analytics/analytics.scss
+++ b/public/styles/pages/analytics/analytics.scss
@@ -45,16 +45,13 @@
         box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.5);
         background-color: #f7f4f4;
 
-        div {
-            // border: 1px solid #d40a0a;
-        }
 
         #log-account-div {
             width: 67%;
             height: 100%;
         }
         
-        #budget-account-div {
+        #categories-account-div {
             width: 33%;
             height: 66%;
         }
