--- a/public/styles/pages/analytics/analytics.css
+++ b/public/styles/pages/analytics/analytics.css
@@ -45,7 +45,7 @@
   width: 67%;
   height: 100%;
 }
-#analytics-board #analytics-charts #budget-account-div {
+#analytics-board #analytics-charts #categories-account-div {
   width: 33%;
   height: 66%;
 }
