--- a/public/styles/pages/analytics/analytics.css
+++ b/public/styles/pages/analytics/analytics.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   height: 100%;
 }
-#analytics-board #analytics-form {
+#analytics-board .analytics-form {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,37 +15,37 @@
   box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.5);
   background-color: #f7f4f4;
 }
-#analytics-board #analytics-form .row-field {
+#analytics-board .analytics-form .row-field {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
   padding: 3px 2px;
 }
-#analytics-board #analytics-form .row-field * {
+#analytics-board .analytics-form .row-field * {
   margin: 0 4px;
 }
-#analytics-board #analytics-form .row-field input {
+#analytics-board .analytics-form .row-field input {
   width: 100%;
 }
-#analytics-board #analytics-charts {
+#analytics-board .analytics-charts {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
   width: 100%;
   height: 100%;
-  margin-top: 10px;
+  margin: 10px 0 30px 0;
   padding: 10px;
   border-radius: 5px;
   box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.5);
   background-color: #f7f4f4;
 }
-#analytics-board #analytics-charts #log-account-div {
+#analytics-board .analytics-charts #log-account-div {
   width: 67%;
   height: 100%;
 }
-#analytics-board #analytics-charts #categories-account-div {
+#analytics-board .analytics-charts #categories-account-div {
   width: 33%;
   height: 66%;
 }
