--- a/public/styles/pages/budget/budget.css
+++ b/public/styles/pages/budget/budget.css
@@ -1,1 +1,26 @@
-/*# sourceMappingURL=budget.css.map */
+#checking-account-fieldset div {
+  display: flex;
+  justify-content: space-between;
+}
+#checking-account-fieldset div * {
+  margin: 0 5px;
+}
+#checking-account-fieldset div input {
+  text-align: right;
+}
+
+#additional-expenditure-fieldset {
+  margin-top: 10px;
+}
+
+@media all and (max-width: 767px) {
+  .row-field {
+    width: 100%;
+    flex-direction: column;
+  }
+  .analytics-charts {
+    width: 100%;
+    display: flex;
+    flex-direction: column !important;
+  }
+}/*# sourceMappingURL=budget.css.map */
