--- a/public/styles/pages/budget/budget.scss
+++ b/public/styles/pages/budget/budget.scss
@@ -1,3 +1,12 @@
+p {
+    margin: 0;
+}
+
+#checking-analytics-charts {
+    justify-content: space-around !important;
+    flex-wrap: wrap;
+}
+
 #checking-account-fieldset div {
     display: flex;
     justify-content: space-between;
@@ -5,21 +14,50 @@
     * {
         margin: 0 5px;
     }
+}
 
-    input {
-        text-align: right;
-    }
+#budget-account-div {
+    filter: saturate(15%);
 }
 
 #additional-expenditure-fieldset {
     margin-top: 10px;
 }
 
+.row-field {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+span {
+    input:disabled {
+        text-align: right;
+        background-color: transparent;
+    }
+}
+
+.button {
+    margin-left: 10px;
+    width: 20px;
+    height: 20px;
+}
+
+.bottom-info {
+    padding-top: 10px;
+}
+
+#total-add-expenditure {
+    font-weight: bold;
+}
+
 @media all and (max-width: 767px) {
 
-    .row-field {
-        width: 100%;
-        flex-direction: column;
+    #checking-account-fieldset {
+        .row-field {
+            width: 100%;
+            flex-direction: column;
+        }
     }
 
     .analytics-charts {
