--- a/public/styles/pages/budget/budget.css
+++ b/public/styles/pages/budget/budget.css
@@ -1,7 +1,3 @@
-p {
-  margin: 0;
-}
-
 #checking-analytics-charts {
   justify-content: space-around !important;
   flex-wrap: wrap;
@@ -27,6 +23,10 @@ p {
   width: 100%;
   display: flex;
   justify-content: space-between;
+}
+
+#selected-duration {
+  width: 15px !important;
 }
 
 span input:disabled {
