--- a/public/styles/pages/home/home.css
+++ b/public/styles/pages/home/home.css
@@ -1,24 +1,21 @@
-.flex-inline {
-  display: flex;
-  flex-direction: row;
-}
-
 .container {
   width: 42%;
   margin: 2vw;
+  height: 50vh;
+  margin-bottom: 50px;
 }
 
 .responsive-table .col-1 {
   flex-basis: 20%;
 }
 .responsive-table .col-2 {
-  flex-basis: 50%;
+  flex-basis: 35%;
 }
 .responsive-table .col-3 {
-  flex-basis: 15%;
+  flex-basis: 20%;
 }
 .responsive-table .col-4 {
-  flex-basis: 15%;
+  flex-basis: 25%;
 }
 
 @media all and (max-width: 767px) {
