--- a/public/styles/generics/generics.scss
+++ b/public/styles/generics/generics.scss
@@ -1,13 +1,23 @@
 $margin-left: 175px;
 
+html,
 body {
+    overflow-x: hidden;
+}
+body {
+    position: relative;
     height: 100%;
     margin: 0;
     padding: 0;
     font-family: 'lato', sans-serif;
     background-color: #e7e7e7;
     margin-left: $margin-left;
-    overflow-x: hidden;
+}
+
+.container {
+    width: 42%;
+    margin: 2vw;
+    margin-bottom: 20px;
 }
 
 .card-button {
@@ -36,7 +46,8 @@ input[type="date"] {
     width: 151px;
 }
 
-select:disabled, input:disabled {
+select:disabled,
+input:disabled {
     background-color: rgb(221, 221, 221);
 }
 
@@ -73,18 +84,32 @@ input[type=number] {
 }
 
 .noselect {
-    -webkit-touch-callout: none; /* iOS Safari */
-      -webkit-user-select: none; /* Safari */
-       -khtml-user-select: none; /* Konqueror HTML */
-         -moz-user-select: none; /* Old versions of Firefox */
-          -ms-user-select: none; /* Internet Explorer/Edge */
-              user-select: none; /* Non-prefixed version, currently
+    -webkit-touch-callout: none;
+    /* iOS Safari */
+    -webkit-user-select: none;
+    /* Safari */
+    -khtml-user-select: none;
+    /* Konqueror HTML */
+    -moz-user-select: none;
+    /* Old versions of Firefox */
+    -ms-user-select: none;
+    /* Internet Explorer/Edge */
+    user-select: none;
+    /* Non-prefixed version, currently
                                     supported by Chrome, Edge, Opera and Firefox */
-  }
+}
 
 @media all and (max-width: 767px) {
     * {
         font-size: small;
+    }
+
+    div {
+        font-size: 10px;
+    }
+
+    .container {
+        width: 90%;
     }
 
     .dashboard {
