--- a/public/styles/header/header.css
+++ b/public/styles/header/header.css
@@ -32,6 +32,7 @@ header div {
   align-items: center;
 }
 header #username {
+  text-align: end;
   margin: 0 10px;
   text-decoration: none;
   color: #464646;
