--- a/public/styles/header/header.scss
+++ b/public/styles/header/header.scss
@@ -44,6 +44,7 @@ header {
     }
 
     #username {
+        text-align: end;
         margin: 0 10px;
         text-decoration: none;
         color: $secondary-color;
