--- a/public/styles/pages/budget/budget.css
+++ b/public/styles/pages/budget/budget.css
@@ -3,10 +3,6 @@
   flex-wrap: wrap;
 }
 
-#checking-account-fieldset div {
-  display: flex;
-  justify-content: space-between;
-}
 #checking-account-fieldset div * {
   margin: 0 5px;
 }
@@ -49,13 +45,27 @@ span input:disabled {
 }
 
 @media all and (max-width: 767px) {
+  body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  body #analytics-board {
+    display: flex;
+    width: 90%;
+  }
   #checking-account-fieldset .row-field {
-    width: 100%;
     flex-direction: column;
   }
   .analytics-charts {
     width: 100%;
     display: flex;
     flex-direction: column !important;
+    align-items: center;
+    align-content: center;
+  }
+  #additional-expenditure-fieldset {
+    margin-bottom: 20px;
   }
 }/*# sourceMappingURL=budget.css.map */
