--- a/public/styles/pages/budget/budget.scss
+++ b/public/styles/pages/budget/budget.scss
@@ -4,9 +4,6 @@
 }
 
 #checking-account-fieldset div {
-    display: flex;
-    justify-content: space-between;
-
     * {
         margin: 0 5px;
     }
@@ -52,10 +49,21 @@ span {
 }
 
 @media all and (max-width: 767px) {
+    body {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        #analytics-board {
+            display: flex;
+            width: 90%;
+        }
+    }
+
 
     #checking-account-fieldset {
         .row-field {
-            width: 100%;
             flex-direction: column;
         }
     }
@@ -64,5 +72,11 @@ span {
         width: 100%;
         display: flex;
         flex-direction: column !important;
+        align-items: center;
+        align-content: center;
+    }
+
+    #additional-expenditure-fieldset {
+        margin-bottom: 20px;
     }
 }
