--- a/public/styles/pages/events/events.css
+++ b/public/styles/pages/events/events.css
@@ -42,27 +42,27 @@
   width: 95%;
 }
 #event-board #event-list .responsive-table .col-1 {
-  flex-basis: 20%;
+  flex-basis: 18%;
 }
 #event-board #event-list .responsive-table .col-2 {
-  flex-basis: 15%;
+  flex-basis: 13%;
 }
 #event-board #event-list .responsive-table .col-3 {
   flex-basis: 10%;
 }
 #event-board #event-list .responsive-table .col-4 {
-  flex-basis: 15%;
+  flex-basis: 16%;
 }
 #event-board #event-list .responsive-table .col-5 {
-  flex-basis: 15%;
+  flex-basis: 16%;
 }
 #event-board #event-list .responsive-table .col-6 {
-  flex-basis: 10%;
+  flex-basis: 14%;
 }
 #event-board #event-list .responsive-table .col-7 {
   display: flex;
   justify-content: center;
-  flex-basis: 15%;
+  flex-basis: 13%;
 }
 #event-board #date-to-search {
   margin-right: 2.5%;
@@ -70,6 +70,16 @@
 }
 
 @media all and (max-width: 767px) {
+  .col-4 {
+    flex-basis: 11% !important;
+  }
+  .col-5 {
+    flex-basis: 21% !important;
+  }
+  .table-header * {
+    font-size: 7px;
+    font-weight: bold;
+  }
   .row-field {
     flex-direction: column !important;
     align-items: flex-start !important;
