--- a/public/styles/pages/login/login.css
+++ b/public/styles/pages/login/login.css
@@ -9,7 +9,15 @@ input:-webkit-autofill:active {
   box-shadow: inset 0 0 20px 20px rgba(35, 35, 35, 0);
 }
 
+body {
+  overflow-x: hidden;
+  overflow-y: hidden;
+  width: 100vw;
+  height: 100vh;
+}
+
 #section-core {
+  margin-left: -175px;
   position: absolute;
   z-index: 150;
   top: 0;
@@ -17,8 +25,8 @@ input:-webkit-autofill:active {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  width: 100vw;
+  width: 100%;
+  height: 100%;
   -webkit-backdrop-filter: blur(5px) saturate(15%) brightness(35%);
           backdrop-filter: blur(5px) saturate(15%) brightness(35%);
 }
@@ -150,4 +158,13 @@ input:-webkit-autofill:active {
 }
 #section-core .forget a:hover {
   text-decoration: underline;
+}
+
+@media all and (max-width: 767px) {
+  #section-core {
+    margin-left: 0;
+  }
+  div {
+    font-size: 15px;
+  }
 }/*# sourceMappingURL=login.css.map */
