--- a/public/styles/pages/login/login.scss
+++ b/public/styles/pages/login/login.scss
@@ -1,3 +1,5 @@
+$margin-left: 175px;
+
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
@@ -8,7 +10,15 @@ input:-webkit-autofill:active {
     box-shadow: inset 0 0 20px 20px #23232300;
 }
 
+body {
+    overflow-x: hidden;
+    overflow-y: hidden;
+    width: 100vw;
+    height: 100vh;
+}
+
 #section-core {
+    margin-left: -$margin-left;
     position: absolute;
     z-index: 150;
     top: 0;
@@ -16,8 +26,8 @@ input:-webkit-autofill:active {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    width: 100vw;
+    width: 100%;
+    height: 100%;
     backdrop-filter: blur(5px) saturate(15%) brightness(35%);
 
     .form-box {
@@ -164,5 +174,15 @@ input:-webkit-autofill:active {
         a:hover {
             text-decoration: underline;
         }
+    }
+}
+
+@media all and (max-width: 767px) {
+    #section-core {
+        margin-left: 0;
+    }
+
+    div {
+        font-size: 15px;
     }
 }
