Fix total_sold display in accounts.js and accounts.css

--- a/public/styles/pages/accounts/accounts.scss
+++ b/public/styles/pages/accounts/accounts.scss
@@ -6,6 +6,11 @@ $phone-width: 767px;
     flex-direction: row;
 }
 
+#total-sold {
+    display: flex;
+    justify-content: flex-end;
+}
+
 #transfer {
     margin-top: 3vw;
     background-color: #f5f5f5;
