--- a/public/styles/pages/accounts/accounts.css
+++ b/public/styles/pages/accounts/accounts.css
@@ -3,6 +3,11 @@
   flex-direction: row;
 }
 
+#total-sold {
+  display: flex;
+  justify-content: flex-end;
+}
+
 #transfer {
   margin-top: 3vw;
   background-color: #f5f5f5;
