--- a/public/styles/pages/verification/verification.scss
+++ b/public/styles/pages/verification/verification.scss
@@ -28,3 +28,11 @@
         flex-basis: 15%;
     }
 }
+
+.selected{
+    background-color: #aae78e !important;
+}
+
+.to-delete{
+    background-color: #ff9b9b !important;
+}
