--- a/public/styles/pages/verification/verification.css
+++ b/public/styles/pages/verification/verification.css
@@ -2,10 +2,6 @@
   margin-bottom: 0;
 }
 
-#additional-operation {
-  margin-top: 30px;
-}
-
 .responsive-table .col-1 {
   flex-basis: 18%;
 }
@@ -30,4 +26,23 @@
 
 .to-delete {
   background-color: #ff9b9b !important;
+}
+
+#notes-pannel {
+  display: flex;
+  justify-content: center;
+  transition: all 0.15s ease-out;
+}
+#notes-pannel #notes {
+  width: 100%;
+  margin: 25px 10px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #fff;
+  box-shadow: 0 0 5px #ccc;
+}
+
+.valide_button {
+  margin-bottom: 45px;
 }/*# sourceMappingURL=verification.css.map */
