--- a/public/styles/pages/operations/operations.scss
+++ b/public/styles/pages/operations/operations.scss
@@ -84,7 +84,30 @@
     }
 }
 
+#note-box {
+    position: absolute;
+    z-index: 1000;
+    top: 25%;
+    left: 10%;
+    width: 35%;
+    height: 25%;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #ffffffc2;
+    box-shadow: 0 0 5px #ccc;
+    cursor: grab;
+}
+
+#note-box:hover {
+    background-color: #ffffffe5;
+    transform: scale(1.01);
+}
+
 @media all and (max-width: 767px) {
+    #note-box {
+        display: none;
+    }
+
     .flex-inline {
         flex-direction: column;
     }
