--- a/public/styles/pages/events/events.css
+++ b/public/styles/pages/events/events.css
@@ -42,38 +42,52 @@
   width: 95%;
 }
 #event-board #event-list .responsive-table .col-1 {
-  flex-basis: 18%;
+  flex-basis: 16%;
 }
 #event-board #event-list .responsive-table .col-2 {
-  flex-basis: 13%;
-}
-#event-board #event-list .responsive-table .col-3 {
   flex-basis: 10%;
 }
+#event-board #event-list .responsive-table .col-3 {
+  flex-basis: 20%;
+}
 #event-board #event-list .responsive-table .col-4 {
-  flex-basis: 16%;
+  flex-basis: 10%;
 }
 #event-board #event-list .responsive-table .col-5 {
-  flex-basis: 16%;
-}
-#event-board #event-list .responsive-table .col-6 {
   flex-basis: 14%;
 }
+#event-board #event-list .responsive-table .col-6 {
+  flex-basis: 12%;
+}
 #event-board #event-list .responsive-table .col-7 {
-  display: flex;
-  justify-content: center;
   flex-basis: 13%;
+}
+#event-board #event-list .responsive-table .col-8 {
+  flex-basis: 5%;
 }
 #event-board #date-to-search {
   margin-right: 2.5%;
   margin-left: auto;
 }
 
+.col {
+  overflow: hidden;
+  max-width: 100%;
+  text-overflow: ellipsis;
+  width: -moz-fit-content;
+  width: fit-content;
+  white-space: nowrap;
+}
+
+.col-8 {
+  overflow: visible;
+}
+
 @media all and (max-width: 767px) {
-  .col-4 {
+  .col-5 {
     flex-basis: 11% !important;
   }
-  .col-5 {
+  .col-6 {
     flex-basis: 21% !important;
   }
   .table-header * {
