--- a/public/styles/table/table.css
+++ b/public/styles/table/table.css
@@ -26,6 +26,10 @@
 .responsive-table .table-row:hover {
   background-color: #f5f5f5;
 }
+.responsive-table .editing-row {
+  flex-wrap: wrap;
+  height: auto;
+}
 @media all and (max-width: 767px) {
   .responsive-table li {
     height: 5px;
