--- a/public/styles/table/table.scss
+++ b/public/styles/table/table.scss
@@ -32,6 +32,11 @@ $phone-width: 767px;
         background-color: #f5f5f5;
     }
 
+    .editing-row {
+        flex-wrap: wrap;
+        height: auto;
+    }
+
     @media all and (max-width: 767px) {
         li {
             height: 5px;
