Add slope info + bug fix

--- a/public/styles/pages/analytics/analytics.css
+++ b/public/styles/pages/analytics/analytics.css
@@ -49,6 +49,9 @@
   width: 33%;
   height: 66%;
 }
+#analytics-board #forecast-info {
+  color: rgb(49, 66, 221);
+}
 
 @media all and (max-width: 767px) {
   #analytics-board {
