--- a/public/styles/pages/analytics/analytics.scss
+++ b/public/styles/pages/analytics/analytics.scss
@@ -32,7 +32,7 @@
         }
     }
 
-    .analytics-charts { // Class à modifier demain !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+    .analytics-charts {
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -55,6 +55,10 @@
             width: 33%;
             height: 66%;
         }
+    }
+
+    #forecast-info{
+        color: rgb(49, 66, 221);
     }
 }  // -----------------------------------------------------------------------------------
 
