Add loading GIF and update styles; refactor analytics and verification templates

--- a/public/styles/generics/generics.scss
+++ b/public/styles/generics/generics.scss
@@ -80,6 +80,14 @@ input[type=number] {
     }
 }
 
+#loading-gif {
+    position: absolute;
+    top: 50vh;
+    left: 50vw;
+    transform: translate(-50%, -50%);
+    width: 10%;
+}
+
 .noselect {
     -webkit-touch-callout: none;
     /* iOS Safari */
