--- a/public/styles/generics/generics.css
+++ b/public/styles/generics/generics.css
@@ -1,9 +1,5 @@
-html,
 body {
   overflow-x: hidden !important;
-}
-
-body {
   position: relative;
   height: 100%;
   margin: 0;
@@ -79,6 +75,14 @@ input[type=number] {
 }
 .valide_button:hover {
   background-color: #ececec;
+}
+
+#loading-gif {
+  position: absolute;
+  top: 50vh;
+  left: 50vw;
+  transform: translate(-50%, -50%);
+  width: 10%;
 }
 
 .noselect {
