--- a/public/styles/pages/analytics/analytics.scss
+++ b/public/styles/pages/analytics/analytics.scss
@@ -1,3 +1,15 @@
+
+#phone-warning {
+    display: none;
+    color: rgb(238, 219, 219);
+    background-color: #da3737;
+    font-size: 1.5em;
+    text-align: center;
+    padding: 10px;
+    border-radius: 5px;
+    margin: 10px;
+}
+
 #analytics-board {
     margin: 2vw;
     display: flex;
@@ -5,7 +17,7 @@
     flex-direction: column;
     height: 100%;
 
-    .analytics-form {
+    #analytics-form {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -32,7 +44,7 @@
         }
     }
 
-    .analytics-charts {
+    #analytics-charts {
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -60,6 +72,13 @@
     #forecast-info{
         color: rgb(49, 66, 221);
     }
+
+    #under-chart {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 100%;
+    }
 }  // -----------------------------------------------------------------------------------
 
 @media all and (max-width: 767px) {
@@ -73,5 +92,20 @@
                 width: 100%;
             }
         }
+
+        #under-chart {
+            flex-direction: column;
+            height: 100px;
+
+            #export-csv-button {
+                margin-top: 50px !important;
+            }
+        }
+    }
+}
+
+@media (pointer: coarse)  {
+    #phone-warning {
+        display: block;
     }
 }
