--- a/public/styles/pages/analytics/analytics.scss
+++ b/public/styles/pages/analytics/analytics.scss
@@ -44,7 +44,7 @@
         }
     }
 
-    #analytics-charts {
+    .analytics-charts {
         display: flex;
         flex-direction: row;
         align-items: center;
